--- a/servicios.html
+++ b/servicios.html
@@ -58,9 +58,11 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Nos desarrollamos en el área de transporte en la ciudad de Alta Gracia y alrededores </p>
-                        <p>Somos un grupo de amigos que comenzó en pandemia a realizar viajes a vecinos de Alta Gracia, luego nació la idea de darle a los ciudadanos una herramienta para viajar mucho más simple y sin esperas</p>
-                        <p>Entre nuestros servicios: Cadetería, viajes dentro de la ciudad, viajes fuera del radio, transportes diarios a Córdoba Capital, Transporte escolar</p>
+                        <p>¡Hola! ¡Somos Remis Ya!
+                            Con nuestro servicio te facilitamos el pedido de remis, ya que estamos en contacto con varias agencias de Remis. </p>
+                        <p>¿Como funciona Remis Ya?
+                            Es simple, una vez que realizas el pedido de un vehículo para trasladarte por la ciudad de Córdoba a través de nuestra página, nosotros enviamos esta solicitud a nuestras agencias amigas de Remis para que acepten la solicitud y te envíen un coche, de esta forma tendrás a tu disposición el móvil de la agencia que esté con más vehículos libres por tu zona, es decir que tendrás un coche a tu disposición lo antes posible sin tener que llamar a varias agencias para saber quien puede enviarte un móvil más rápido.</p>
+                        <p>Es una herramienta para viajar mucho más simple y sin esperas. Además contamos con servicios de cadetería y viajes dentro de la ciudad, viajes fuera del ejido municipal, transporte escolar y abonos mensuales para tu comodidad.</p>
                     </div>
                 </div>
             </div>
