Actualización de Índex y Registro
Actualización de las secciones Índex, Índex-2 y Registro.

--- a/registro.html
+++ b/registro.html
@@ -113,10 +113,19 @@
                     <label for="validationCustom04">Barrio</label>
                     <select class="custom-select" name="barrio" id="barrio" placeholder="Ingrese su barrio" required>
                       <option selected disabled value="">Elige...</option>
-                      <option>Crucero</option>
-                      <option>San Juan</option>
-                      <option>Liniers</option>
-                      <option>Sur</option>
+                      <option selected disabled value="">Elige...</option>
+                      <option>1	Zona Central (CPC Mercado de la Ciudad)</option>
+                      <option>2	Zona Norte (CPC Centro América)</option>
+                      <option>3	Zona Nordeste (CPC Rancagua)</option>
+                      <option>4	Zona Este (CPC Pueyrredón)</option>
+                      <option>5	Zona Sudeste (CPC Empalme)</option>
+                      <option>6	Zona Sur (CPC Villa El Libertador)</option>
+                      <option>7	Zona Sudoeste (CPC Ruta 20)</option>
+                      <option>8	Zona Oeste (CPC Colón)</option>
+                      <option>9	Zona Noroeste (CPC Monseñor Pablo Cabrera)</option>
+                      <option>10 Zona Cerro / Argüello (CPC Argüello)</option>
+                      <option>11 Zona Guiñazú (CPC Guiñazú)</option>
+                      <option>12 Otro - Especificar en "Dirección" porfavor</option>
                     </select>
                     <div class="invalid-feedback">
                       Selecciona una opción
