--- a/RemisYa/src/index.html
+++ b/RemisYa/src/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+
+     <!-- Bootstrap CSS -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <title>RemisYa</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
